namespaces/ping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harlock-ingress
  namespace: ping
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "api.ping.harlock.fr | ping.harlock.fr"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "api.ping.harlock.fr"
    secretName: api-ping-harlock-fr-tls
  - hosts:
    - "ping.harlock.fr"
    secretName: ping-harlock-fr-tls
  rules:
  - host: "api.ping.harlock.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000
  - host: "ping.harlock.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3001
